--- a/Game/CrazyGame/CrazyGame/CrazyGame.vcxproj
+++ b/Game/CrazyGame/CrazyGame/CrazyGame.vcxproj
@@ -129,13 +129,35 @@
   <ItemGroup>
     <ClCompile Include="..\..\D2DCore\CApp.cpp" />
     <ClCompile Include="..\..\D2DCore\CCore.cpp" />
+    <ClCompile Include="CBitmap.cpp" />
+    <ClCompile Include="CInGameScene.cpp" />
+    <ClCompile Include="CLayer.cpp" />
+    <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CrazyGame.cpp" />
+    <ClCompile Include="CObj.cpp" />
     <ClCompile Include="CScene.cpp" />
+    <ClCompile Include="CLobbyScene.cpp" />
+    <ClCompile Include="CSceneManager.cpp" />
+    <ClCompile Include="CResourceManager.cpp" />
+    <ClCompile Include="CUI.cpp" />
+    <ClCompile Include="CUIButton.cpp" />
+    <ClCompile Include="CUIPanel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\D2DCore\CApp.h" />
     <ClInclude Include="..\..\D2DCore\CCore.h" />
+    <ClInclude Include="CBitmap.h" />
+    <ClInclude Include="CInGameScene.h" />
+    <ClInclude Include="CLayer.h" />
+    <ClInclude Include="CObj.h" />
+    <ClInclude Include="CPlayer.h" />
     <ClInclude Include="CScene.h" />
+    <ClInclude Include="CLobbyScene.h" />
+    <ClInclude Include="CSceneManager.h" />
+    <ClInclude Include="CResourceManager.h" />
+    <ClInclude Include="CUI.h" />
+    <ClInclude Include="CUIButton.h" />
+    <ClInclude Include="CUIPanel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
