--- a/Game/CrazyGame/CrazyGame/CrazyGame.vcxproj
+++ b/Game/CrazyGame/CrazyGame/CrazyGame.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="CLobbyScene.cpp" />
     <ClCompile Include="CSceneManager.cpp" />
     <ClCompile Include="CResourceManager.cpp" />
+    <ClCompile Include="CTile.cpp" />
     <ClCompile Include="CUI.cpp" />
     <ClCompile Include="CUIButton.cpp" />
     <ClCompile Include="CUIPanel.cpp" />
@@ -159,9 +160,11 @@
     <ClInclude Include="CLobbyScene.h" />
     <ClInclude Include="CSceneManager.h" />
     <ClInclude Include="CResourceManager.h" />
+    <ClInclude Include="CTile.h" />
     <ClInclude Include="CUI.h" />
     <ClInclude Include="CUIButton.h" />
     <ClInclude Include="CUIPanel.h" />
+    <ClInclude Include="Setting.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
