--- a/Game/CrazyGame/CrazyGame/CrazyGame.vcxproj.filters
+++ b/Game/CrazyGame/CrazyGame/CrazyGame.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="CInputManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="CTile.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\D2DCore\CApp.h">
@@ -117,6 +120,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="CInputManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Setting.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CTile.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
