--- a/Game/CrazyGame/CrazyGame/CrazyGame.vcxproj.filters
+++ b/Game/CrazyGame/CrazyGame/CrazyGame.vcxproj.filters
@@ -66,7 +66,7 @@
     <ClCompile Include="CTimer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="CAnimation.cpp">
+    <ClCompile Include="CAnimator.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="CAnimationClip.cpp">
@@ -155,7 +155,7 @@
     <ClInclude Include="CTimer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="CAnimation.h">
+    <ClInclude Include="CAnimator.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="CAnimationClip.h">
