--- a/Game/CrazyGame/CrazyGame/CrazyGame.vcxproj.filters
+++ b/Game/CrazyGame/CrazyGame/CrazyGame.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="CBlock.cpp">
       <Filter>소스 파일\Obj</Filter>
     </ClCompile>
+    <ClCompile Include="CVehicle.cpp">
+      <Filter>소스 파일\Obj</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\D2DCore\CApp.h">
@@ -196,6 +199,9 @@
     </ClInclude>
     <ClInclude Include="CBoard.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CVehicle.h">
+      <Filter>소스 파일\Obj</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
